--- a/src/App.css
+++ b/src/App.css
@@ -41,42 +41,7 @@ header p {
   font-style: italic;
 }
 
-/* Barra de Navegação */
-nav {
-  background-color: #00332e;
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  z-index: 999;
-  scroll-behavior: smooth; 
-}
 
-nav ul {
-  list-style-type: none;
-  display: flex;
-  justify-content: center;
-  padding: 10px 0;
-}
-
-nav ul li {
-  margin: 0 15px;
-}
-
-nav ul li a {
-  text-decoration: none;
-  color: #fff;
-  font-size: 18px;
-  font-weight: 500;
-  text-transform: uppercase;
-  padding: 10px;
-  border-radius: 5px;
-  transition: background-color 0.3s ease;
-}
-
-nav ul li a:hover {
-  background-color: #00796b;
-}
 
 /* Seções */
 section {
@@ -257,11 +222,15 @@ footer p {
   header p {
       font-size: 16px;
   }
+  nav {
+    position: absolute;
+    top: 0
+  }
 
   nav ul {
       flex-direction: column;
       padding: 20px 0;
-      background: black
+      background: #004d40
   }
 
   nav ul li {
@@ -283,9 +252,20 @@ footer p {
   .faq-item h3 {
       font-size: 22px;
   }
+  .containerMap {
+    width: 90%;
+    max-width: 1200px;
+    margin: 0 auto; 
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-around;
+    text-align: center;
+  }
 }
 
 @media screen and (max-width: 480px) {
+
   header h1 {
       font-size: 24px;
   }
