--- a/src/Components/MapComponent/styles.css
+++ b/src/Components/MapComponent/styles.css
@@ -1,9 +1,27 @@
-.mapContainer{
-    width:40rem;
+.mapContainer {
+    width: 40rem;
     height: 35rem;
     max-width: 550px;
     max-height: 550px;
     z-index: 2;
     margin: 0 auto;
     border: #0096873b solid 1px;
+}
+
+/* Para telas menores que 768px (por exemplo, celulares) */
+@media (max-width: 768px) {
+    .mapContainer {
+        width: 100%;
+        height: 25rem; /* Ajuste conforme necessário */
+        max-width: 100%;
+        max-height: 400px; /* Ajuste conforme necessário */
+    }
+}
+
+/* Para telas maiores que 768px (por exemplo, tablets e notebooks) */
+@media (min-width: 769px) {
+    .mapContainer {
+        width: 40rem;
+        height: 35rem;
+    }
 }
